--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "prettier": "^2.2.1",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.6.0",
-    "webpack-glsl-loader": "github:patriciogonzalezvivo/webpack-glsl-loader"
+    "webpack-glsl-loader": "github:patriciogonzalezvivo/webpack-glsl-loader",
+    "wesl-packager": "link:../wesl-js/tools/packages/wesl-packager"
   },
   "eslintConfig": {
     "env": {
