--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "webpack": "^5.36.2",
     "webpack-cli": "^4.6.0",
     "webpack-glsl-loader": "github:patriciogonzalezvivo/webpack-glsl-loader",
-    "wesl-packager": "link:../wesl-js/tools/packages/wesl-packager"
+    "wesl-packager": "^0.6.1"
   },
   "eslintConfig": {
     "env": {
