add biome for convenient formatting

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "homepage": "https://lygia.xyz",
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-prettier": "^3.4.0",
