--- a/package.json
+++ b/package.json
@@ -40,14 +40,21 @@
   },
   "homepage": "https://lygia.xyz",
   "devDependencies": {
-    "eslint": "^7.24.0",
-    "eslint-config-prettier": "^8.2.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "prettier": "^2.2.1",
-    "webpack": "^5.36.2",
-    "webpack-cli": "^4.6.0",
+    "@typescript/native-preview": "7.0.0-dev.20251030.1",
+    "@webgpu/types": "^0.1.66",
+    "eslint": "^9.38.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "prettier": "^3.6.2",
+    "vite": "^7.1.12",
+    "vitest": "^4.0.5",
+    "vitest-image-snapshot": "^0.6.22",
+    "webpack": "^5.102.1",
+    "webpack-cli": "^6.0.1",
     "webpack-glsl-loader": "github:patriciogonzalezvivo/webpack-glsl-loader",
-    "wesl-packager": "^0.6.2"
+    "wesl-link": "^0.6.22",
+    "wesl-packager": "^0.6.22",
+    "wesl-test": "^0.6.22"
   },
   "eslintConfig": {
     "env": {
