--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lygia",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "lygia, it's a granular and multi-language shader library designed for performance and flexibility",
   "main": "dist/umd/lygia.main.js",
   "unpkg": "dist/umd/lygia.main.js",
@@ -9,9 +9,12 @@
   "type": "module",
   "scripts": {
     "build": "rm -rf dist/* && webpack",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build:wesl": "wesl-packager --src \"**/*.wesl\" --projectDir . --rootDir . --updatePackageJson --multiBundle --outDir dist",
-    "lint": "eslint --fix --ext .js ."
+    "build:wesl": "wesl-packager --multiBundle --outDir dist",
+    "lint": "eslint --fix --ext .js .",
+    "prepublishOnly": "pnpm test:built",
+    "test": "pnpm vitest",
+    "test:built": "pnpm build:wesl && TEST_BUNDLES=true pnpm vitest run",
+    "test:once": "pnpm vitest run"
   },
   "repository": {
     "type": "git",
