--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lygia",
-  "version": "1.3.4",
+  "version": "1.3.5-rc.3",
   "description": "lygia, it's a granular and multi-language shader library designed for performance and flexibility",
   "main": "dist/umd/lygia.main.js",
   "unpkg": "dist/umd/lygia.main.js",
@@ -43,21 +43,21 @@
   },
   "homepage": "https://lygia.xyz",
   "devDependencies": {
-    "@typescript/native-preview": "7.0.0-dev.20251105.1",
+    "@typescript/native-preview": "7.0.0-dev.20251108.1",
     "@webgpu/types": "^0.1.66",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
-    "vite": "^7.2.0",
-    "vitest": "^4.0.7",
-    "vitest-image-snapshot": "^0.6.29",
+    "vite": "^7.2.2",
+    "vitest": "^4.0.8",
+    "vitest-image-snapshot": "^0.6.36",
     "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1",
     "webpack-glsl-loader": "github:patriciogonzalezvivo/webpack-glsl-loader",
-    "wesl-link": "^0.6.29",
-    "wesl-packager": "^0.6.29",
-    "wesl-test": "^0.6.29"
+    "wesl-link": "^0.6.36",
+    "wesl-packager": "^0.6.36",
+    "wesl-test": "^0.6.36"
   },
   "eslintConfig": {
     "env": {
