--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lygia",
-  "version": "1.3.5-rc.3",
+  "version": "1.3.5-rc.4",
   "description": "lygia, it's a granular and multi-language shader library designed for performance and flexibility",
   "main": "dist/umd/lygia.main.js",
   "unpkg": "dist/umd/lygia.main.js",
@@ -10,6 +10,7 @@
   "scripts": {
     "build": "rm -rf dist/* && webpack",
     "build:wesl": "wesl-packager --multiBundle --outDir dist",
+    "ci:check": "pnpm test:once && pnpm test:built",
     "lint": "eslint --fix --ext .js .",
     "prepublishOnly": "pnpm test:built",
     "test": "pnpm vitest",
