--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "lint": "eslint --fix --ext .js .",
     "prepublishOnly": "pnpm build:wesl",
     "test": "pnpm vitest",
-    "test:built": "pnpm build:wesl && TEST_BUNDLES=true pnpm vitest run",
-    "test:deno": "deno run -A --unstable-webgpu npm:vitest run",
-    "test:once": "pnpm vitest run"
+    "test:built": "pnpm build:wesl && TEST_BUNDLES=true pnpm vitest run && TEST_BUNDLES=true wgsl-test run",
+    "test:deno": "pnpm test:deno:vitest && pnpm test:deno:native",
+    "test:deno:vitest": "deno run -A --unstable-webgpu npm:vitest run",
+    "test:deno:native": "deno run -A --unstable-webgpu npm:wgsl-test run",
+    "test:native": "wgsl-test run",
+    "test:native:built": "pnpm build:wesl && TEST_BUNDLES=true wgsl-test run",
+    "test:once": "pnpm vitest run && wgsl-test run"
   },
   "repository": {
     "type": "git",
@@ -45,21 +49,21 @@
   },
   "homepage": "https://lygia.xyz",
   "devDependencies": {
-    "@typescript/native-preview": "7.0.0-dev.20260119.1",
+    "@typescript/native-preview": "7.0.0-dev.20260205.1",
     "@webgpu/types": "^0.1.69",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.5",
-    "prettier": "^3.8.0",
+    "prettier": "^3.8.1",
     "vite": "^7.3.1",
-    "vitest": "^4.0.17",
-    "vitest-image-snapshot": "^0.6.44",
-    "webpack": "^5.104.1",
+    "vitest": "^4.0.18",
+    "vitest-image-snapshot": "^0.6.45",
+    "webpack": "^5.105.0",
     "webpack-cli": "^6.0.1",
     "webpack-glsl-loader": "github:patriciogonzalezvivo/webpack-glsl-loader",
-    "wesl-link": "^0.7.11",
-    "wesl-packager": "^0.7.11",
-    "wgsl-test": "^0.2.16"
+    "wesl-link": "^0.7.13",
+    "wesl-packager": "^0.7.13",
+    "wgsl-test": "^0.2.18"
   },
   "eslintConfig": {
     "env": {
