mv image snapshots for testing to a separate repo, drop git-lfs
a script fetches the images from git if necesary before tests are run

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ __image_diffs__
 __image_actual__
 __image_diff_report__
 __image_dev__
+__image_snapshots__
 
 # let users experiment with AI, but don't clutter the repo
 .claude
